Added links to pages that are not yet made

--- a/assignmentsRUs.html
+++ b/assignmentsRUs.html
@@ -3,9 +3,9 @@
 		<title>Assignment R Us Homepage</title>
 	</head>
 	
-	<body bgcolor="red">
+	<body bgcolor="white">
 		<center><h1>Assignments R Us</h1></center>
-		<p>Welcome to Assignments R Us! Here you can purhcase answers
+		<p>Welcome to <b>Assignments R Us!</b> Here you can purchase answers
 		to Computer Science assignments for various classes at McGill. 
 		We've got what you need, because "Assignments Are Us".</p>
 
@@ -14,10 +14,10 @@
 		</div>
 		
 		<div id="nav">
-		Home<br>
-		Assignment Catalogue<br>
-		Login<br>
-		User Registration<br>
+		<a href="www.cs.mcgill.ca/~eugoli/assignmentsRUs.html">Home</a><br>
+		<a href="www.cs.mcgill.ca/~eugoli/catalogue.html">Assignment Catalogue</a><br>
+		<a href="www.cs.mcgill.ca/~eugoli/login.html">Login</a><br>
+		<a href="www.cs.mcgill.ca/~eugoli/login.html">User Registration</a><br>
 		</div>
 	
 		<div id="section">
@@ -27,7 +27,7 @@
 		</div>
 
 		<div id="footer">
-		Copyright A. Smofsky and E. Ugolini 2014
+		<i>Copyright A. Smofsky and E. Ugolini 2014</i>
 		</div>
 	</body>
 <html>
