--- a/assignmentsRUs.html
+++ b/assignmentsRUs.html
@@ -2,32 +2,39 @@
 	<head>
 		<title>Assignment R Us Homepage</title>
 	</head>
-	
+	<style type="text/css">
+	body{
+		font-family: Georgia, "Times New Roman", Times, serif;
+		padding-left: 11em;
+		padding-right: 11em;
+	}
+		ul.Menu{
+		position: absolute;
+		top: 2em;
+		left: 1em;
+		width: 9em}
+	h1{
+		font-family: Helvetica, Geneva, Arial, SunSans-Regular, sans-serif}	
+	</style>
 	<body bgcolor="white">
 		<center><h1>Assignments R Us</h1></center>
 		<p>Welcome to <b>Assignments R Us!</b> Here you can purchase answers
 		to Computer Science assignments for various classes at McGill. 
 		We've got what you need, because "Assignments Are Us".</p>
 
-		<div id="header">
-		<h2>Menu</h2>
-		</div>
-		
-		<div id="nav">
-		<a href="www.cs.mcgill.ca/~eugoli/assignmentsRUs.html">Home</a><br>
-		<a href="www.cs.mcgill.ca/~eugoli/catalogue.html">Assignment Catalogue</a><br>
-		<a href="www.cs.mcgill.ca/~eugoli/login.html">Login</a><br>
-		<a href="www.cs.mcgill.ca/~eugoli/login.html">User Registration</a><br>
-		</div>
+		<u>Menu</u>
 	
-		<div id="section">
-		<h3>Browse the available assignments in the Assignment Catalogue.
+		<ul>	
+		<li><a href="www.cs.mcgill.ca/~eugoli/assignmentsRUs.html">Home</a>
+		<li><a href="www.cs.mcgill.ca/~eugoli/catalogue.html">Assignment Catalogue</a>
+		<li><a href="www.cs.mcgill.ca/~eugoli/login.html">Login</a>
+		<li><a href="www.cs.mcgill.ca/~eugoli/login.html">User Registration</a>
+		</ul>
+	
+		<p>Browse the available assignments in the Assignment Catalogue.
 		If you find something you want, register your username to purchase,
-		or, if you've already done so, just login.</h3>
-		</div>
-
-		<div id="footer">
-		<i>Copyright A. Smofsky and E. Ugolini 2014</i>
-		</div>
+		or, if you've already done so, just login.</p>
 	</body>
-<html>
+		<footer><i>Copyright A. Smofsky and E. Ugolini 2014</i>
+		</footer>
+</html>
