made login open with new tab

--- a/assignmentsRUs.html
+++ b/assignmentsRUs.html
@@ -27,7 +27,7 @@
 		<ul>	
 		<li><a href="www.cs.mcgill.ca/~eugoli/assignmentsRUs.html">Home</a>
 		<li><a href="www.cs.mcgill.ca/~eugoli/catalogue.html">Assignment Catalogue</a>
-		<li><a href="www.cs.mcgill.ca/~eugoli/login.html">Login</a>
+		<li><a href="www.cs.mcgill.ca/~eugoli/login.html" target="_blank">Login</a>
 		<li><a href="www.cs.mcgill.ca/~eugoli/login.html">User Registration</a>
 		</ul>
 	
@@ -35,6 +35,6 @@
 		If you find something you want, register your username to purchase,
 		or, if you've already done so, just login.</p>
 	</body>
-		<footer><i>Copyright A. Smofsky and E. Ugolini 2014</i>
+		<footer><small><i>Copyright A. Smofsky and E. Ugolini 2014<small></i>
 		</footer>
 </html>
