--- a/login.html
+++ b/login.html
@@ -12,23 +12,25 @@
 		<table border="0">
 		<tr>
 		<th>Navigation</th>
-		<th>Text goes heeeeeeeeeere!!!!</th>
+		<th></th>
 		</tr>
 		<td>
 			<u></u>
 			
 			<ul>
-			<li><a href="/~eugoli/assignmentsRUs.html">Home</a>
+			<li><a href="/~eugoli/twochocolateers.html">Home</a>
 			<li><a href="/~eugoli/catalogue.html">Chocologue</a>
 			<li><a href="/~eugoli/login.html" target="_blank">Login</a>
 			<li><a href="/~eugoli/Register.html">Register</a>
 			</ul>	
 		</td>
-		<td>
+		<td class="loginform">
+		<center>
 			<form name="input" action="login.c" method="post">
 				<b>Username:</b> <input type="text" name="user"><br />
 				<b>Password:</b> <input type="password" name="password"><br />
 			</form>
+		</center>
 		</td>
 		</table>
 	</body>
