--- a/register.html
+++ b/register.html
@@ -28,14 +28,16 @@
 							<li><a href="/~eugoli/twochocolateers.html">Home</a>
 							<li><a href="/~eugoli/catalogue.html">Chocologue</a>
 							<li><a href="/~eugoli/login.html" target="_blank">Login</a>
-							<li><a href="/~eugoli/register.html">Register</a>
+							<li><a href="/~eugoli/Register.html">Register</a>
 						</ul>	
 					</td>
-					<td class="loginform">
+					<td class="registerform">
 						<center>
 						<form name="input" action="login.c" method="post">
+							<b>Full Name:</b> <input type="text" name="fullname"><br />
 							<b>Username:</b> <input type="text" name="user"><br />
 							<b>Password:</b> <input type="password" name="password"><br />
+							<b>Confirm Password:</b> <input type="password" name="password"><br />
 							<input type="submit" name="submit"><br />
 						</form>
 						</center>
