--- a/twochocolateers.html
+++ b/twochocolateers.html
@@ -3,36 +3,47 @@
 		<link rel="stylesheet" type="text/css" href="theme.css">
 		<title>The Two Chocolateers</title>
 	</head>
-	<style type="text/css">
-	body{
-		font-family: Georgia, "Times New Roman", Times, serif;
-		padding-left: 11em;
-		padding-right: 11em;
-	}
-		ul.Menu{
-		position: absolute;
-		top: 2em;
-		left: 1em;
-		width: 9em}
-	h1{
-		font-family: Helvetica, Geneva, Arial, SunSans-Regular, sans-serif}	
-	</style>
-	<body bgcolor="white">
+	<body>
 		<center><h1>The Two Chocolateers</h1></center>
-		<p>Welcome to <b>The Two Chocolateers</b> Browse our selection of chocolates from 
-		the Chocologue linked in the navigation bar to the left. If you find something you like,
-		login to purchase, or register yourself as a new user. Happy Chocolateering!</p>
-
-		<u></u>
 	
-		<ul>	
-		<li><a href="/~eugoli/twochocolateers.html">Home</a>
-		<li><a href="/~eugoli/catalogue.html">Chocologue</a>
-		<li><a href="/~eugoli/login.html" target="_blank">Login</a>
-		<li><a href="/~eugoli/login.html">User Registration</a>
-		</ul>
+		<div></div>
+		<div id="left" class="bar">
+			<img src="http://i.imgur.com/Azmopp3.png">
+		</div>
 	
+		<div id="mid">
+			<h2 id="intro">Welcome to <b>The Two Chocolateers</b>! Browse our selection of chocolates from 
+			the Chocologue linked in the navigation bar to the left. If you find something you like,
+			login to purchase, or register yourself as a new user. Happy Chocolateering!</h2>
+	
+		<table border="0">
+			<tbody>
+				<tr>
+				<th>Navigation</th>
+					<th></th>
+				</tr>
+				<tr>
+				<td>
+					<u></u>
+	
+					<ul>	
+						<li><a href="/~eugoli/twochocolateers.html">Home</a>
+						<li><a href="/~eugoli/catalogue.html">Chocologue</a>
+						<li><a href="/~eugoli/login.html" target="_blank">Login</a>
+						<li><a href="/~eugoli/register.html">Register</a>
+					</ul>
+				</td>
+				<td class="homepage">
+					<center>
+					</center>
+				</td>
+				</tr>
+			</tbody>
+		</table>
+		</div>
+		<div id="right" class="bar">
+			<img src="http://i.imgur.com/NcNYdGO.png"></img>
+		</div>
+		<p id="footer"><small><i>Copyright &copy; 2014. A. Smofsky and E. Ugolini. All rights reserved.<small></i></p>
 	</body>
-		<footer><small><i>Copyright &copy; 2014. A. Smofsky and E. Ugolini. All rights reserved.<small></i>
-		</footer>
 </html>
