--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
 							<li><a href="/~eugoli/twochocolateers.html">Home</a>
 							<li><a href="/~eugoli/catalogue.html">Chocologue</a>
 							<li><a href="/~eugoli/login.html" target="_blank">Login</a>
-							<li><a href="/~eugoli/Register.html">Register</a>
+							<li><a href="/~eugoli/register.html">Register</a>
 						</ul>	
 					</td>
 					<td class="registerform">
@@ -47,6 +47,7 @@
 		<div id="right" class="bar">
 			<img src='http://i.imgur.com/NcNYdGO.png'></img>
 		</div>
-		<p id="footer"><small><i>Copyright &copy; 2014. A. Smofsky and E. Ugolini. All rights reserved.<small></i></p>
-	</body>
+		</body>
+		<center><footer style="margin-top: 400px;"><small><i>Copyright &copy; 2014. A. Smofsky and E. Ugolini. All rights reserved.<small></i></p>
+	</center>
 </html>
