--- a/twochocolateers.html
+++ b/twochocolateers.html
@@ -44,6 +44,7 @@
 		<div id="right" class="bar">
 			<img src="http://i.imgur.com/NcNYdGO.png"></img>
 		</div>
-		<p id="footer"><small><i>Copyright &copy; 2014. A. Smofsky and E. Ugolini. All rights reserved.<small></i></p>
-	</body>
+		</body>
+		<center><footer style="margin-top: 400px;"><small><i>Copyright &copy; 2014. A. Smofsky and E. Ugolini. All rights reserved.<small></i></p>
+	</center>
 </html>
