--- a/catalogue.html
+++ b/catalogue.html
@@ -41,8 +41,8 @@
 						<form name="input" action="login.c" method="post" style="float: right; margin-left: 50px;">
 							<td width="350px">
 							<fieldset id="item1" style="border-color:#FF9999;">
-								<img src="http://www.thebelgian.com/public/uploads/products/tablet100gDark.jpg" width="40%" height="15%">
-								<p><b>Dark Chalk-late</b><br>The darkest chocolate you will ever eat. Tastes like chalk!</p>
+								<img src="http://www.thebelgian.com/public/uploads/products/tablet100gDark.jpg" width="30%" height="15%" style="float: left; padding-right: 5px;">
+								<b>Dark Chalk-late</b><br>The darkest chocolate you will ever eat. Tastes like chalk!
 							</td>
 							<td style="text-align:center;">
 								<input type="checkbox" name="item" value="name of item1">
@@ -55,7 +55,8 @@
 							</fieldset>
 							<td>
 							<fieldset id="item2" style="border-color:#FF9999;">
-								<img src="">
+								<img src="http://img2.wikia.nocookie.net/__cb20110902145449/chocolate/images/2/2d/Prd-chocolate-lollipops.jpg" width="30%" height="50%" style="float: left; padding-right: 5px;">
+								<b>Chocolate Lollipop</b><br>These are always fun. Unless the chocolate is really thick. You could break a tooth on that. This chocolate is not tooth-breaky.
 							</td>
 							<td style="text-align:center;">
 								<input type="checkbox" name="item" value="name of item2">
@@ -70,7 +71,8 @@
 							</td>
 							<td>
 							<fieldset id="item3" style="border-color:#FF9999;">
-								<img src="">
+								<img src="http://4.bp.blogspot.com/-Cp2uqOqk6-g/URxORTrrReI/AAAAAAAAFp0/R1iOQd4zD8Y/s640/Chocolate+Cake+2+.jpg" style="float: left; padding-right: 5px;" width="30%" height="20%">
+								<b>Chocolate Cake</b><br>Seriously who does not like chocolate cake. No one. No one does not like chocolate cake.
 							</td>
 							<td style="text-align:center;">
 								<input type="checkbox" name="item" value="name of item3">
