--- a/catalogue.html
+++ b/catalogue.html
@@ -50,7 +50,7 @@
 								<p>1$</p>
 							</td>
 							<td style="text-align:center;">
-								<input type="checkbox" name="item1" value="name of item1">
+								<input type="checkbox" name="item" value="Dark Chalk-late">
 							</td>
 							<td>
 								<input type="text" size="2" name="item1">
@@ -67,7 +67,7 @@
 								<p>2$</p>
 							</td>
 							<td style="text-align:center;">
-								<input type="checkbox" name="item2" value="name of item2">
+								<input type="checkbox" name="item" value="Chocolate Lollipop">
 							</td>
 							<td>
 								<input type="text" size="2" name="item2">
@@ -86,7 +86,7 @@
 								<p>3$</p>
 							</td>
 							<td style="text-align:center;">
-								<input type="checkbox" name="item3" value="name of item3">
+								<input type="checkbox" name="item" value="Chocolate Cake">
 							</td>
 							<td>
 								<input type="text" size="2" name="item3">
