--- a/catalogue.html
+++ b/catalogue.html
@@ -44,13 +44,13 @@
 							<td width="350px">
 							<fieldset id="item1" style="border-color:#FF9999;">
 								<img src="http://www.thebelgian.com/public/uploads/products/tablet100gDark.jpg" width="30%" height="15%" style="float: left; padding-right: 5px;">
-								<b>Dark Chalk-late</b><br>The darkest chocolate you will ever eat. Tastes like chalk!
+								<b>Chalklate</b><br>The darkest chocolate you will ever eat. Tastes like chalk!
 							</td>
 							<td style="text-align:center;">
 								<p>1$</p>
 							</td>
 							<td style="text-align:center;">
-								<input type="checkbox" name="item1" value="Dark Chalk-late">
+								<input type="checkbox" name="item1" value="Chalklate">
 							</td>
 							<td>
 								<input type="text" size="2" name="item1">
@@ -61,13 +61,13 @@
 							<td>
 							<fieldset id="item2" style="border-color:#FF9999;">
 								<img src="http://img2.wikia.nocookie.net/__cb20110902145449/chocolate/images/2/2d/Prd-chocolate-lollipops.jpg" width="30%" height="50%" style="float: left; padding-right: 5px;">
-								<b>Chocolate Lollipop</b><br>These are always fun. Unless the chocolate is really thick. You could break a tooth on that. This chocolate is not tooth-breaky.
+								<b>Chocopop</b><br>These are always fun. Unless the chocolate is really thick. You could break a tooth on that. This chocolate is not tooth-breaky.
 							</td>
 							<td style="text-align:center;">
 								<p>2$</p>
 							</td>
 							<td style="text-align:center;">
-								<input type="checkbox" name="item2" value="Chocolate Lollipop">
+								<input type="checkbox" name="item2" value="Chocopop">
 							</td>
 							<td>
 								<input type="text" size="2" name="item2">
@@ -80,13 +80,13 @@
 							<td>
 							<fieldset id="item3" style="border-color:#FF9999;">
 								<img src="http://4.bp.blogspot.com/-Cp2uqOqk6-g/URxORTrrReI/AAAAAAAAFp0/R1iOQd4zD8Y/s640/Chocolate+Cake+2+.jpg" style="float: left; padding-right: 5px;" width="30%" height="20%">
-								<b>Chocolate Cake</b><br>Seriously who does not like chocolate cake. No one. No one does not like chocolate cake.
+								<b>Chococake</b><br>Seriously who does not like chocolate cake. No one. No one does not like chocolate cake.
 							</td>
 							<td style="text-align:center;">
 								<p>3$</p>
 							</td>
 							<td style="text-align:center;">
-								<input type="checkbox" name="item3" value="Chocolate Cake">
+								<input type="checkbox" name="item3" value="Chococake">
 							</td>
 							<td>
 								<input type="text" size="2" name="item3">
