--- a/catalogue.html
+++ b/catalogue.html
@@ -53,7 +53,7 @@
 								<input type="checkbox" name="item1" value="Chalklate">
 							</td>
 							<td>
-								<input type="text" size="2" name="item1">
+								<input type="text" size="2" name="item1" value="0">
 								<br />
 							</td>
 							<tr>
@@ -70,7 +70,7 @@
 								<input type="checkbox" name="item2" value="Chocopop">
 							</td>
 							<td>
-								<input type="text" size="2" name="item2">
+								<input type="text" size="2" name="item2" value="0">
 								<br />
 							</td>
 							</tr>
@@ -89,7 +89,7 @@
 								<input type="checkbox" name="item3" value="Chococake">
 							</td>
 							<td>
-								<input type="text" size="2" name="item3">
+								<input type="text" size="2" name="item3" value="0">
 								<br />
 							</td>
 							</tr>
@@ -105,6 +105,4 @@
 			<img src='http://i.imgur.com/NcNYdGO.png'></img>
 		</div>
 		</body>
-	<center><footer style="margin-top:700px;"><small><i>Copyright &copy; 2014. A. Smofsky and E. Ugolini. All rights reserved.<small></i></footer>
-	</center>
 </html>
