yoyoyoyoyoyoyoyo NEW ONE

--- a/catalogue.html
+++ b/catalogue.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<h1><center>The Two Chocolateers</center></h1>
-		<input type="hidden" name="username" value="thisistheusername">
+<!		<input type="hidden" name="username" value="thisistheusername">>
 		<div>
 		</div>
 		<div id="left" class="bar">
