--- a/twochocolateers.html
+++ b/twochocolateers.html
@@ -7,11 +7,11 @@
 		<center><h1>The Two Chocolateers</h1></center>
 	
 		<div></div>
-		<div id="left" class="bar">
+		<div id="left" class="bar" style="width:20%; float:left;">
 			<img src="http://i.imgur.com/Azmopp3.png">
 		</div>
 	
-		<div id="mid">
+		<div id="mid" style="width: 60%; position: absolute; padding-left: 20%;">
 			<h2 id="intro">Welcome to <b>The Two Chocolateers</b>! Browse our selection of chocolates from 
 			the Chocologue linked in the navigation bar to the left. If you find something you like,
 			login to purchase, or register yourself as a new user. Happy Chocolateering!</h2>
@@ -41,10 +41,10 @@
 			</tbody>
 		</table>
 		</div>
-		<div id="right" class="bar">
+		<div id="right" class="bar" style="width:20%; float:right;">
 			<img src="http://i.imgur.com/NcNYdGO.png"></img>
 		</div>
-		</body>
 		<center><footer style="margin-top: 400px;"><small><i>Copyright &copy; 2014. A. Smofsky and E. Ugolini. All rights reserved.<small></i></p>
 	</center>
+	</body>
 </html>
